fix: board text align center

--- a/src/styles/gameshows/Jepoardy.css
+++ b/src/styles/gameshows/Jepoardy.css
@@ -159,7 +159,8 @@
 .jp-overlay .jp-board {
     position: absolute;
     right: 75px;
-    top: 75px
+    top: 75px;
+    text-align: center;
 }
 
 .jp-VDOStreams {
